# streamlit-happiness

./: .gitignore  Dockerfile  LICENSE  README.md  happiness-app.py  pyproject.toml
data/: world_happiness_combined.csv
