[tool.poetry]
name = "streamlit-happiness"
version = "0.1.0"
description = "Streamlit app for visualizing world happiness data"
authors = ["Elise Barattini"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
streamlit = "^1.0.0"
pandas = "^1.3.0"
plotly = "^5.0.0"
matplotlib = "^3.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
