[tool.poetry]
name = "streamlit-happiness"
version = "0.1.0"
description = "Streamlit app for visualizing world happiness data"
authors = ["Elise Barattini"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.0.0"
pandas = "1.5.3"
plotly = "^5.0.0"
matplotlib = "^3.9.2"
numpy = "1.24.3"
seaborn = "^0.13.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
